# geoclue-mock

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  fi.inz.GeoclueMock.gschema.xml  geoclue-mock.c  geoclue-mock.provider  org.freedesktop.Geoclue.Providers.Mock.service.in
